<resources>
    <string name="app_name">Golden Scent</string>
    <string name="make_up">Make Up</string>
    <string name="skin_care">Skin Care</string>
    <string name="hair">Hair</string>
    <string name="beauty_tool">Beauty Tool</string>
    <string name="home_frag">Home Fragrances</string>
    <string name="men">Men</string>
    <string name="gifts">Gifts</string>

    <string name="pencil">Pencils</string>
    <string name="lipstick">Lipstick</string>
    <string name="lip_glows">Lipgloss</string>
    <string name="lip_balm">Lip Balm</string>
    <string name="treatment">Treatment</string>
    <string name="palette">Palette</string>

    <string name="best_seller">Best Sellers</string>
    <string name="view_all">View All</string>
    <string name="lips">Lips</string>
    <string name="face">Face</string>
    <string name="add">Add</string>

</resources>
