<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/expand_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/expand_list_item_bg"
        android:elevation="6dp"
        android:foreground="?selectableItemBackground"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view"
            style="@style/item_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:src="@drawable/ic_arrow_down" />

    </RelativeLayout>


    <app.desing.com.mytestapplication.expandUtil.ExpandableLayout
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:el_duration="200"
        app:el_expanded="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_img_1"
                        style="@style/item_img_style"
                        android:src="@drawable/product_pencil" />

                    <TextView
                        android:id="@+id/item_name_1"
                        style="@style/item_text_style"
                        android:text="@string/pencil" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_img_2"
                        style="@style/item_img_style"
                        android:src="@drawable/product_lip_stick" />

                    <TextView
                        android:id="@+id/item_name_2"
                        style="@style/item_text_style"
                        android:text="@string/lipstick" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_img_3"
                        style="@style/item_img_style"
                        android:src="@drawable/product_glows" />

                    <TextView
                        android:id="@+id/item_name_3"
                        style="@style/item_text_style"
                        android:text="@string/lip_glows" />

                </LinearLayout>
            </LinearLayout>


            //Row 2

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_img_4"
                        style="@style/item_img_style"
                        android:src="@drawable/product_lip_balm" />

                    <TextView
                        android:id="@+id/item_name_4"
                        style="@style/item_text_style"
                        android:text="@string/lip_balm" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_img_5"
                        style="@style/item_img_style"
                        android:src="@drawable/product_treatment" />

                    <TextView
                        android:id="@+id/item_name_5"
                        style="@style/item_text_style"
                        android:text="@string/treatment" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_img_6"
                        style="@style/item_img_style"
                        android:src="@drawable/product_palete" />

                    <TextView
                        android:id="@+id/item_name_6"
                        style="@style/item_text_style"
                        android:text="@string/palette" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </app.desing.com.mytestapplication.expandUtil.ExpandableLayout>

</LinearLayout>
